--- a/ChatApp-Backend/src/main/resources/application.properties
+++ b/ChatApp-Backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/chatapp_db
 spring.datasource.username=root
