--- a/chatapp-frontend/package.json
+++ b/chatapp-frontend/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.7"
+    "tailwindcss": "^3.3.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
