--- a/ChatApp-Backend/src/main/resources/application.properties
+++ b/ChatApp-Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/chatapp_db
 spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.password=root
 
 # Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Logging SQL Statements
 #spring.jpa.show-sql=true
+
+
+aes.encryption.key=this-is-test-key
