--- a/ChatApp-Backend/src/main/resources/application.properties
+++ b/ChatApp-Backend/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 # Logging SQL Statements
 #spring.jpa.show-sql=true
 
-
+#Encryption configuration key
 aes.encryption.key=this-is-test-key
