--- a/ChatApp-Backend/src/main/resources/application.properties
+++ b/ChatApp-Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/chatapp_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin123
 
 # Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
